istio-configs/virtualservice-product.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-service
  namespace: microservices
spec:
  hosts:
    - product-service
  http:
    - route:
        - destination:
            host: product-service
            port:
              number: 8080
            subset: v1
          weight: 100
      timeout: 5s
      retries:
        attempts: 3
        perTryTimeout: 2s
